# cavity-benchmark

./: .gitignore  README.md  pull-euler.sh  push-config.sh  pyproject.toml
euler/: README.md  run.sbatch
src/: analytic.py  compare.py  gen_config.py
src/cavity_benchmark/: __init__.py  benchmark.py  make_figures.py  poynting.py  sphere.py  uncertainty_normal.py
src/cavity_benchmark/plot/: convergence.py  field.py  ksweep.py  noise.py  operator.py
src/cavity_benchmark/results/: aggregate.py  uq.py
src/cavity_dipoles/: benchmark.py  make_figures.py  sphere.py
src/cavity_dipoles/epgp/: convergence.py  operators.py
src/cavity_dipoles/plot/: common.py  convergence.py  field_lic.py
src/cavity_dipoles/results/: aggregate.py  extrapolate.py
